[package]
name = "newtwork_prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
x25519-dalek = "2.0.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand_core = "0.6"
chacha20poly1305 = "0.10"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
chrono = "0.4"
